# dlogos-graph

./: .env.example  .gitignore  BUILD_REPORT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: RUNBOOK.md  dlogos-graph-architecture-critique.md  dlogos-graph-architecture.md
docs/corpus/: ai_sensemaking_20.json
scripts/: run_kg_slice.py  run_smoke_inmemory.py  smoke_one_episode.py
src/dlogos/: __init__.py  config.py  pipeline.py  schema.py
tests/: conftest.py  test_e2e_smoke.py  test_grounding_pipeline.py  test_pipeline.py  test_pipeline_integration.py  test_pipeline_resolvers.py  test_run_kg_slice_script.py  test_schema.py  test_smoke_one_episode_script.py
tests/asr/: test_adversarial_diarization.py  test_diarization.py  test_hf_token.py  test_hosted_backend.py  test_mock_backend.py  test_talk_time.py  test_word_segmentation.py
tests/eval/: test_agreement.py  test_arms.py  test_arms_independent.py  test_blind.py  test_fragmentation.py  test_golden.py  test_misattribution_adversarial.py  test_rubric.py  test_runner.py
tests/extraction/: test_chunking.py  test_extractor.py  test_grounding.py  test_predicates.py
tests/fixtures/: __init__.py  adversarial.py
tests/graph/: test_export.py  test_fake_store.py  test_loader.py  test_neo4j_store.py  test_relations.py  test_temporal.py
tests/ingestion/: test_charts.py  test_fetch.py  test_manifest.py  test_podcast_index.py  test_queue.py  test_speaker_enrich.py  test_transcript_source.py
tests/mcp/: test_graph_surface.py  test_mcp_ui_server.py
tests/resolution/: test_canonical_store.py  (+5 more)
(+101 files in other folders)
