[project]
name = "dlogos"
version = "0.1.0"
description = "dLogos PoC — a generalized temporal dialogue knowledge graph built from podcasts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "openai>=1.40",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
asr = [
    "whisperx",
    "pyannote.audio",
    "torch",
    "faster-whisper",
]
graph = [
    "graphiti-core",
    "neo4j",
]
embed = [
    "FlagEmbedding",
    "sentence-transformers",
]
ui = [
    "gradio",
]
mcp = [
    "mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlogos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.uv]
# Core group only is installed by default; optional groups (asr/graph/embed/ui/mcp)
# carry heavy/optional deps and are NOT synced for tests.
